Some overflow fixes

--- a/stylesheets/scss/_base.scss
+++ b/stylesheets/scss/_base.scss
@@ -74,3 +74,7 @@ ol {
 ul {
   list-style-type: disc;
 }
+
+pre {
+  overflow: auto;
+}
