--- a/stylesheets/scss/modules/_sidebar.scss
+++ b/stylesheets/scss/modules/_sidebar.scss
@@ -1,4 +1,5 @@
 .sidebar {
   grid-row: 2 / span 1;
   grid-column: 2 / span 1;
+  overflow: hidden;
 }
