--- a/stylesheets/scss/modules/_site-main.scss
+++ b/stylesheets/scss/modules/_site-main.scss
@@ -1,4 +1,5 @@
 .site-main {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
+  overflow: hidden;
 }
